add pdf output :cake:
each book is now available as pdf (eg senseBox:edu_de.pdf)
styling might need improvement

also chmod +x deploy_docs.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
 - '5'
 before_install:
 - npm install -g gitbook-cli
+- apt-get install -y calibre
 after_success:
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash
   deploy_docs.sh
