--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '5'
 before_install:
-- npm install -g gitbook-cli
+- npm install -g "gitbook-cli" "github:RanzQ/node-apidoc-markdown#4373ed3"
 # install calibre from github, needed for pdf export
 - sudo -v && wget -nv -O- https://raw.githubusercontent.com/kovidgoyal/calibre/master/setup/linux-installer.py | sudo python -c "import sys; main=lambda:sys.stderr.write('Download failed\n'); exec(sys.stdin.read()); main()"
 after_success:
