--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "sensebox-books",
   "version": "1.0.0",
-  "description": "Open Educational Resources for senseBox:home and senseBox:edu",
+  "description": "Open Educational Resources for senseBox:home, senseBox:edu, openSenseMap",
   "scripts": {
-    "dev": "gitbook serve",
-    "build": "sh deploy_docs.sh"
+    "dev": "gitbook serve edu",
+    "build": "scripts/build_osemdocs.sh && scripts/build.sh",
+    "deploy": "scripts/deploy_ghpages.sh"
   },
   "repository": {
     "type": "git",
