--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ before_deploy:
   - git config --global user.email "builds@travis-ci.com"
   - git config --global user.name "Travis CI"
   - export GIT_TAG=TAG-$TRAVIS_BRANCH
-  - git push origin :refs/tags/$GIT_TAG
+  - git push https://$GH_TOKEN@github.com/$TRAVIS_REPO_SLUG :refs/tags/$GIT_TAG
   - git tag $GIT_TAG -af -m "generated tag from travis for build $TRAVIS_BUILD_NUMBER"
-  - git push -qf https://GH_TOKEN@github.com/senseboxx/books.git --tags
+  - git push -qf https://GH_TOKEN@github.com/$TRAVIS_REPO_SLUG.git --tags
 deploy:
   provider: releases
   api-key: $GH_TOKEN
